fixed the gutter for H1

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="headerWrapper">
         <header>
             <img src="images/logo1x.png" alt="My Logo" width="75" height="36" srcset="images/logo1x.png 1x, images/logo2x.png 2x, images/logo3x.png 3x">
-            <h1></h1>
+            <h1>Evergreen Edge</h1>
             <a href="tel:7685559785">(768) 555-9785</a>
         </header>
     </div>
